Fixed wrapping for quiz UI

--- a/quiz/quiz.css
+++ b/quiz/quiz.css
@@ -5,36 +5,35 @@ body{
     background-color: #ededed;
 }
 header{
-    
-    padding-top: 15px;
-    padding-bottom: 45px;
-    margin-right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     background-color: #34576F;
-    
-    
-    
-}
+    padding-left: 10px;
+    padding-right: 10px;
+      
+  }
+  
+  #logo img{
+     height: 40px;
+     margin-right: 45px;
+  }
 
-#logo{
-    position: fixed;
-    top: 10px;
-    left: 10px;
-}
-
-.wrapper{
-   
-    position: absolute;
+.wrapper{ 
+    position: auto;
+    margin: 0 auto;
+    margin-top: 10px;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    text-align: center;
     width: 80%;
-    height: 85%;
+    height: auto;
     padding: 50px;
     background-color: #ffffff;
     border-radius: 15px;
     box-shadow: 1px 3px 3px #878787;
     overflow: hidden;
-}
+ }
 
 .wrapper h1{
     text-align: center;
